--- a/CO3/OptionsMenu/app/src/main/AndroidManifest.xml
+++ b/CO3/OptionsMenu/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.OptionsMenu"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity1"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity3"
             android:exported="false" />
         <activity
